--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@neondatabase/neon-js": "^0.1.0-beta.15",
     "@neondatabase/serverless": "^1.0.2",
     "@uploadthing/react": "^7.3.3",
     "drizzle-kit": "^0.31.8",
