--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
+    "@stackframe/stack": "^2.8.56",
     "@uploadthing/react": "^7.3.3",
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.1",
